@@ -14,6 +14,9 @@ Changes
 Fixes
 -----
 
+ - Do not automatically execute the query when clicking on 
+   the "Query Table" button in the table view.
+
 2017/09/26 1.6.2
 ================
 
